tests/rpm-pkgs/libmodulemd-2.13.0-3.fc35/output-exp@valgrind/scan-results.err
Error: COMPILER_WARNING (CWE-477):
modulemd-2.13.0/modulemd/tests/test-modulemd-validator.c: scope_hint: In function ‘test_exit_code’
modulemd-2.13.0/modulemd/tests/test-modulemd-validator.c:136:3: warning[-Wdeprecated-declarations]: ‘g_spawn_check_exit_status’ is deprecated: Use 'g_spawn_check_wait_status' instead
#  136 |   g_spawn_check_exit_status (validator_exit_status, &error);
#      |   ^~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/glib-2.0/glib.h:81: included_from: Included from here.
modulemd-2.13.0/modulemd/tests/test-modulemd-validator.c:14: included_from: Included from here.
/usr/include/glib-2.0/glib/gspawn.h:280:10: note: declared here
#  280 | gboolean g_spawn_check_exit_status (gint      wait_status,
#      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
#  134|     g_autoptr (GError) error = NULL;
#  135|     g_autofree gchar *message = NULL;
#  136|->   g_spawn_check_exit_status (validator_exit_status, &error);
#  137|     message = g_strdup_printf ("exit code was %d", expected_exit_code);
#  138|     if (0 == expected_exit_code)

Error: VALGRIND_WARNING:
modulemd/modulemd-validator: note: while executing process 5571 with arguments: /builddir/build/BUILD/modulemd-2.13.0/redhat-linux-build/../modulemd/tests/test_data/invalid_defaults.yaml
modulemd-2.13.0/redhat-linux-build/../modulemd/modulemd-defaults-v1.c:564: warning[Leak_DefinitelyLost]: 660 (64 direct, 596 indirect) bytes in 1 blocks are definitely lost in loss record 293 of 298
/usr/lib64/libgobject-2.0.so.0.7000.5: note: called from g_type_create_instance()
/usr/lib64/libgobject-2.0.so.0.7000.5: note: called from here
/usr/lib64/libgobject-2.0.so.0.7000.5: note: called from g_object_new_valist()
/usr/lib64/libgobject-2.0.so.0.7000.5: note: called from g_object_new()
modulemd-2.13.0/redhat-linux-build/../modulemd/modulemd-defaults-v1.c:564: note: called from modulemd_defaults_v1_parse_yaml()
modulemd-2.13.0/redhat-linux-build/../modulemd/modulemd-module-index.c:217: note: called from UnknownInlinedFun()
modulemd-2.13.0/redhat-linux-build/../modulemd/modulemd-module-index.c:338: note: called from modulemd_module_index_update_from_parser()
modulemd-2.13.0/redhat-linux-build/../modulemd/modulemd-module-index.c:638: note: called from modulemd_module_index_update_from_file_ext()
modulemd-2.13.0/redhat-linux-build/../modulemd/modulemd-validator.c:375: note: called from UnknownInlinedFun()
modulemd-2.13.0/redhat-linux-build/../modulemd/modulemd-validator.c:473: note: called from main()
#  562|      * constructed object.
#  563|      */
#  564|->   defaults = modulemd_defaults_v1_new (DEFAULT_PLACEHOLDER);
#  565|   
#  566|     YAML_PARSER_PARSE_WITH_EXIT (&parser, &event, error);
